# api/docs/swagger.yaml
@@ -6786,6 +6786,10 @@ paths:
         in: query
         name: client-type-id
         type: string
+      - description: project-id
+        in: query
+        name: project-id
+        type: string
       produces:
       - application/json
       responses:
