# api/handlers/user_v2.go
@@ -62,6 +62,7 @@ func (h *Handler) V2CreateUser(c *gin.Context) {
 // @Param search query string false "search"
 // @Param client-platform-id query string false "client-platform-id"
 // @Param client-type-id query string false "client-type-id"
+// @Param project-id query string false "project-id"
 // @Success 200 {object} http.Response{data=auth_service.GetUserListResponse} "GetUserListResponseBody"
 // @Response 400 {object} http.Response{data=string} "Invalid Argument"
 // @Failure 500 {object} http.Response{data=string} "Server Error"
